--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="estilo.css"/>   
+    <link rel="stylesheet" type="text/css" href="jogodavelha.css"/>   
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </head>
