--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="jogodavelha.css"/>   
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="jogodavelha.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
