--- a/Jogo/index.html
+++ b/Jogo/index.html
@@ -13,12 +13,14 @@
 <body>
     <table class='cetralizado'>
         <tr>
-            <td id="msg" colspan="3"><h1 id='labelTitulo' class='cetralizado'></h1></td>
+            <td colspan="3"><h1 id='labelTitulo' class='cetralizado titulo'></h1></td>
+            <td><h1 id='placar' class='cetralizado titulo'>Placar</h1></td>
         </tr>
         <tr>
             <td><input id="0" class="botao casa" type="button" onclick='clickou(this)'/></td>
             <td><input id="1" class="botao casa" type="button" onclick='clickou(this)'/></td>
             <td><input id="2" class="botao casa" type="button" onclick='clickou(this)'/></td>
+            <td rowspan="2"><h1 id="placarX"></h1></td>
         </tr>
         <tr>
             <td><input id="3" class="botao casa" type="button" onclick='clickou(this)'/></td>
@@ -29,6 +31,7 @@
             <td><input id="6" class="botao casa" type="button" onclick='clickou(this)'/></td>
             <td><input id="7" class="botao casa" type="button" onclick='clickou(this)'/></td>
             <td><input id="8" class="botao casa" type="button" onclick='clickou(this)'/></td>
+            <td rowspan="2"><h1 id="placarO"></h1></td>
         </tr>
         <tr>
             <td colspan="3"><input class="botao limpar" type="button" onclick='limpar()' value="Limpar"/></td>
